--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
 </head>
 <body>
     <div class="site">
+        <div class="top">
+
+
+            <img class="logo" src="images/Logo.svg" alt="Logo">
+
+
+        </div>
+
+        <div class="robot">
+
+
+        </div>
+
+        <div class="bottom">
+
+        </div>
 
     </div>
 </body>
