--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="site">
         <div class="top">
 
-
+            <img class="skyline" src="images/MobileSkyline.svg" alt="Skyline">
             <img class="logo" src="images/Logo.svg" alt="Logo">
 
 
