--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <!-- Send the email from the user. -->
             <form id="emailForm" action="https://formspree.io/doxuancntp@gmail.com" method="POST" >
                 <div class="flex-item">
-                    <div id="txtEntryFieldWrapper" class="txtEntryFieldWrapperBefore">
-                        <input id="txtEntryField" class="txtEntryFieldBefore" type="text" name="name" autocomplete="off" placeholder="What's your email address?">
+                    <div id="txtEntryFieldWrapper" class="txtEntryFieldWrapperBefore txtEntryFieldWrapperMobile">
+                        <input id="txtEntryField" class="txtEntryFieldBefore txtEntryFieldMobile" type="text" name="name" autocomplete="off" placeholder="What's your email address?">
                     </div>
                 </div>
                 <div class="flex-item">
