--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p class="firstline"></p>
             </div>
             <div id="ctaBtnWrapper">
-                <button id="ctaBtn" type="button" name="button">YES!</button>
+                <button id="ctaBtn" class="ctaBtnInit" type="button" name="button">YES!</button>
             </div>
 
             <div id="txtIn6">
@@ -43,7 +43,7 @@
 
 
             <!-- Send the email from the user. -->
-            <form id="emailForm" action="https://formspree.io/doxuancntp@gmail.com" method="POST" >
+            <form id="emailForm" class="emailFormInit" action="https://formspree.io/doxuancntp@gmail.com" method="POST" >
                 <div class="flex-item">
                     <div id="txtEntryFieldWrapper" class="txtEntryFieldWrapperBefore txtEntryFieldWrapperMobile">
                         <input id="txtEntryField" class="txtEntryFieldBefore txtEntryFieldMobile" type="text" name="name" autocomplete="off" placeholder="What's your email address?">
