--- a/index.html
+++ b/index.html
@@ -30,16 +30,20 @@
         </div>
 
         <div class="callToAction">
+            <!-- CTA text -->
             <div id="ctaTxtWrapper">
                 <p class="firstline"></p>
             </div>
+            <div id="txtIn6">
+                <p class="firstline"></p>
+            </div>
+
+
+            <!-- CTA button -->
             <div id="ctaBtnWrapper">
                 <button id="ctaBtn" class="ctaBtnInit" type="button" name="button">YES!</button>
             </div>
 
-            <div id="txtIn6">
-                <p class="firstline"></p>
-            </div>
 
 
             <!-- Send the email from the user. -->
