--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="flex-item">
-                    <input id="sendBtn" class="sendBtnInit sendBtnInitMobile" type="submit" value="SEND!">
+                    <input id="sendBtn" class="sendBtnInit" type="submit" value="SEND!">
                 </div>
             </form>
         </div>
