--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <div class="top">
             <img class="skyline" src="images/MobileSkyline.svg" alt="Skyline">
             <img class="logo" src="images/Logo.svg" alt="Logo">
+            <img class="cloud2" src="images/cloud2.svg" alt="Cloud 2">
+            <img class="cloud4" src="images/cloud4.svg" alt="Cloud 4">
+            <img class="cloud21" src="images/cloud21.svg" alt="Cloud 21">
+            <img class="cloud3" src="images/cloud3.svg" alt="Cloud 3">
         </div>
 
         <div class="robot">
